src/test/deca/context/invalid/created/decl_class/field_void.deca
// Description :
//    field de type void
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9 :(2.5) Un attribut ne peut être de type ‘void’

class A{
void a;
}
